@@ -119,18 +119,18 @@
           <ImageView
             android:id="@+id/image_show_done"
             style="@style/Widget.Grocy.ImageView.ListItem.Icon"
-            app:srcCompat="@android:drawable/ic_lock_idle_alarm"
+            app:srcCompat="@drawable/ic_round_notifications"
             tools:ignore="ContentDescription" />
 
           <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
 
             <TextView
               style="@style/Widget.Grocy.TextView.ListItem.Title"
-              android:text="Enable notifications" />
+              android:text="@string/setting_notifications_due_soon" />
 
             <TextView
               style="@style/Widget.Grocy.TextView.ListItem.Description"
-              android:text="Checks for expiring items" />
+              android:text="@string/setting_notifications_due_soon_description" />
 
           </LinearLayout>
 
@@ -145,18 +145,19 @@
         <LinearLayout
           style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Icon.Clickable"
           app:clickUtil="@{clickUtil}"
-          android:visibility="@{viewModel.notificationsEnabledLive ? View.VISIBLE : View.GONE}">
+          android:visibility="@{viewModel.notificationsEnabledLive ? View.VISIBLE : View.GONE}"
+          android:onClick="@{() -> fragment.showTimePickerDialog()}">
 
           <ImageView
               style="@style/Widget.Grocy.ImageView.ListItem.Icon"
-              android:src="@drawable/ic_round_event"
+              android:src="@drawable/ic_round_schedule"
               tools:ignore="ContentDescription" />
 
           <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox">
 
             <TextView
                 style="@style/Widget.Grocy.TextView.ListItem.OverLine"
-                android:text="Notification time" />
+                android:text="@string/setting_notification_time" />
 
             <TextView
               style="@style/Widget.Grocy.TextView.ListItem.Title"
@@ -164,7 +165,7 @@
 
             <TextView
                 style="@style/Widget.Grocy.TextView.ListItem.Description"
-                android:text="Time when the check is done"/>
+                android:text="@string/setting_notification_time_description"/>
 
           </LinearLayout>
 
