@@ -103,6 +103,10 @@
     <item name="android:navigationBarColor">@color/black</item>
   </style>
 
+  <style name="Theme.Grocy.TimePicker" parent="ThemeOverlay.MaterialComponents.TimePicker">
+    <item name="colorPrimary">@color/retro_green</item>
+  </style>
+
   <style name="Theme.Grocy.BottomSheetDialog.SoftInput" parent="Theme.Grocy.BottomSheetDialog">
     <item name="android:windowSoftInputMode">adjustResize</item>
   </style>
